--- a/hello-world-tab-with-backend/.vscode/tasks.json
+++ b/hello-world-tab-with-backend/.vscode/tasks.json
@@ -2,10 +2,11 @@
     "version": "2.0.0",
     "tasks": [
         {
-            "label": "Pre Debug Check",
+            "label": "Pre Debug Check & Start All",
             "dependsOn": [
                 "validate local prerequisites",
-                "prepare local environment"
+                "prepare local environment",
+                "Start All"
             ],
             "dependsOrder": "sequence"
         },
@@ -24,6 +25,13 @@
             "presentation": {
                 "reveal": "never"
             }
+        },
+        {
+            "label": "Start All",
+            "dependsOn": [
+                "Start Frontend",
+                "Start Backend"
+            ]
         },
         {
             "label": "Start Frontend",
@@ -46,20 +54,6 @@
                 "env": {
                     "PATH": "${env:PATH}${command:fx-extension.get-func-path}"
                 }
-            },
-            "presentation": {
-                "reveal": "silent"
-            },
-            "dependsOn": "Watch Backend"
-        },
-        {
-            "label": "Watch Backend",
-            "type": "shell",
-            "command": "npm run watch:teamsfx",
-            "isBackground": true,
-            "problemMatcher": "$tsc-watch",
-            "options": {
-                "cwd": "${workspaceFolder}/api"
             },
             "presentation": {
                 "reveal": "silent"
