--- a/share-now/.vscode/launch.json
+++ b/share-now/.vscode/launch.json
@@ -22,13 +22,13 @@
             }
         },
         {
-            "name": "Start and Attach to Frontend (Edge)",
+            "name": "Attach to Frontend (Edge)",
             "type": "pwa-msedge",
             "request": "launch",
             "url": "https://teams.microsoft.com/l/app/${localTeamsAppId}?installAppPackage=true&webjoin=true&${account-hint}",
             "cascadeTerminateToConfigurations": [
-                "Start and Attach to Bot",
-                "Start and Attach to Backend"
+                "Attach to Bot",
+                "Attach to Backend"
             ],
             "presentation": {
                 "group": "all",
@@ -36,13 +36,13 @@
             }
         },
         {
-            "name": "Start and Attach to Frontend (Chrome)",
+            "name": "Attach to Frontend (Chrome)",
             "type": "pwa-chrome",
             "request": "launch",
             "url": "https://teams.microsoft.com/l/app/${localTeamsAppId}?installAppPackage=true&webjoin=true&${account-hint}",
             "cascadeTerminateToConfigurations": [
-                "Start and Attach to Bot",
-                "Start and Attach to Backend"
+                "Attach to Bot",
+                "Attach to Backend"
             ],
             "presentation": {
                 "group": "all",
@@ -50,7 +50,7 @@
             }
         },
         {
-            "name": "Start and Attach to Bot",
+            "name": "Attach to Bot",
             "type": "pwa-node",
             "request": "attach",
             "port": 9239,
@@ -62,7 +62,7 @@
             "internalConsoleOptions": "neverOpen"
         },
         {
-            "name": "Start and Attach to Backend",
+            "name": "Attach to Backend",
             "type": "pwa-node",
             "request": "attach",
             "port": 9229,
@@ -78,9 +78,9 @@
         {
             "name": "Debug (Edge)",
             "configurations": [
-                "Start and Attach to Frontend (Edge)",
-                "Start and Attach to Bot",
-                "Start and Attach to Backend"
+                "Attach to Frontend (Edge)",
+                "Attach to Bot",
+                "Attach to Backend"
             ],
             "preLaunchTask": "Pre Debug Check & Start All",
             "presentation": {
@@ -92,9 +92,9 @@
         {
             "name": "Debug (Chrome)",
             "configurations": [
-                "Start and Attach to Frontend (Chrome)",
-                "Start and Attach to Bot",
-                "Start and Attach to Backend"
+                "Attach to Frontend (Chrome)",
+                "Attach to Bot",
+                "Attach to Backend"
             ],
             "preLaunchTask": "Pre Debug Check & Start All",
             "presentation": {
