--- a/graph-toolkit-contact-exporter/.vscode/launch.json
+++ b/graph-toolkit-contact-exporter/.vscode/launch.json
@@ -22,22 +22,20 @@
             }
         },
         {
-            "name": "Start and Attach to Frontend (Edge)",
+            "name": "Attach to Frontend (Edge)",
             "type": "pwa-msedge",
             "request": "launch",
             "url": "https://teams.microsoft.com/l/app/${localTeamsAppId}?installAppPackage=true&webjoin=true&${account-hint}",
-            "preLaunchTask": "Start Frontend",
             "presentation": {
                 "group": "all",
                 "hidden": true
             }
         },
         {
-            "name": "Start and Attach to Frontend (Chrome)",
+            "name": "Attach to Frontend (Chrome)",
             "type": "pwa-chrome",
             "request": "launch",
             "url": "https://teams.microsoft.com/l/app/${localTeamsAppId}?installAppPackage=true&webjoin=true&${account-hint}",
-            "preLaunchTask": "Start Frontend",
             "presentation": {
                 "group": "all",
                 "hidden": true
@@ -48,9 +46,9 @@
         {
             "name": "Debug (Edge)",
             "configurations": [
-                "Start and Attach to Frontend (Edge)"
+                "Attach to Frontend (Edge)"
             ],
-            "preLaunchTask": "Pre Debug Check",
+            "preLaunchTask": "Pre Debug Check & Start All",
             "presentation": {
                 "group": "all",
                 "order": 1
@@ -60,9 +58,9 @@
         {
             "name": "Debug (Chrome)",
             "configurations": [
-                "Start and Attach to Frontend (Chrome)"
+                "Attach to Frontend (Chrome)"
             ],
-            "preLaunchTask": "Pre Debug Check",
+            "preLaunchTask": "Pre Debug Check & Start All",
             "presentation": {
                 "group": "all",
                 "order": 2
