--- a/share-now/.vscode/launch.json
+++ b/share-now/.vscode/launch.json
@@ -22,14 +22,13 @@
             }
         },
         {
-            "name": "Start and Attach to Frontend (Edge)",
+            "name": "Attach to Frontend (Edge)",
             "type": "pwa-msedge",
             "request": "launch",
             "url": "https://teams.microsoft.com/l/app/${localTeamsAppId}?installAppPackage=true&webjoin=true&${account-hint}",
-            "preLaunchTask": "Start Frontend",
             "cascadeTerminateToConfigurations": [
-                "Start and Attach to Bot",
-                "Start and Attach to Backend"
+                "Attach to Bot",
+                "Attach to Backend"
             ],
             "presentation": {
                 "group": "all",
@@ -37,14 +36,13 @@
             }
         },
         {
-            "name": "Start and Attach to Frontend (Chrome)",
+            "name": "Attach to Frontend (Chrome)",
             "type": "pwa-chrome",
             "request": "launch",
             "url": "https://teams.microsoft.com/l/app/${localTeamsAppId}?installAppPackage=true&webjoin=true&${account-hint}",
-            "preLaunchTask": "Start Frontend",
             "cascadeTerminateToConfigurations": [
-                "Start and Attach to Bot",
-                "Start and Attach to Backend"
+                "Attach to Bot",
+                "Attach to Backend"
             ],
             "presentation": {
                 "group": "all",
@@ -52,12 +50,11 @@
             }
         },
         {
-            "name": "Start and Attach to Bot",
+            "name": "Attach to Bot",
             "type": "pwa-node",
             "request": "attach",
             "port": 9239,
             "restart": true,
-            "preLaunchTask": "Start Bot",
             "presentation": {
                 "group": "all",
                 "hidden": true
@@ -65,12 +62,11 @@
             "internalConsoleOptions": "neverOpen"
         },
         {
-            "name": "Start and Attach to Backend",
+            "name": "Attach to Backend",
             "type": "pwa-node",
             "request": "attach",
             "port": 9229,
             "restart": true,
-            "preLaunchTask": "Start Backend",
             "presentation": {
                 "group": "all",
                 "hidden": true
@@ -82,11 +78,11 @@
         {
             "name": "Debug (Edge)",
             "configurations": [
-                "Start and Attach to Frontend (Edge)",
-                "Start and Attach to Bot",
-                "Start and Attach to Backend"
+                "Attach to Frontend (Edge)",
+                "Attach to Bot",
+                "Attach to Backend"
             ],
-            "preLaunchTask": "Pre Debug Check",
+            "preLaunchTask": "Pre Debug Check & Start All",
             "presentation": {
                 "group": "all",
                 "order": 1
@@ -96,11 +92,11 @@
         {
             "name": "Debug (Chrome)",
             "configurations": [
-                "Start and Attach to Frontend (Chrome)",
-                "Start and Attach to Bot",
-                "Start and Attach to Backend"
+                "Attach to Frontend (Chrome)",
+                "Attach to Bot",
+                "Attach to Backend"
             ],
-            "preLaunchTask": "Pre Debug Check",
+            "preLaunchTask": "Pre Debug Check & Start All",
             "presentation": {
                 "group": "all",
                 "order": 2
