--- a/todo-list-with-Azure-backend/.vscode/launch.json
+++ b/todo-list-with-Azure-backend/.vscode/launch.json
@@ -22,13 +22,12 @@
             }
         },
         {
-            "name": "Start and Attach to Frontend (Edge)",
+            "name": "Attach to Frontend (Edge)",
             "type": "pwa-msedge",
             "request": "launch",
             "url": "https://teams.microsoft.com/l/app/${localTeamsAppId}?installAppPackage=true&webjoin=true&${account-hint}",
-            "preLaunchTask": "Start Frontend",
             "cascadeTerminateToConfigurations": [
-                "Start and Attach to Backend"
+                "Attach to Backend"
             ],
             "presentation": {
                 "group": "all",
@@ -36,13 +35,12 @@
             }
         },
         {
-            "name": "Start and Attach to Frontend (Chrome)",
+            "name": "Attach to Frontend (Chrome)",
             "type": "pwa-chrome",
             "request": "launch",
             "url": "https://teams.microsoft.com/l/app/${localTeamsAppId}?installAppPackage=true&webjoin=true&${account-hint}",
-            "preLaunchTask": "Start Frontend",
             "cascadeTerminateToConfigurations": [
-                "Start and Attach to Backend"
+                "Attach to Backend"
             ],
             "presentation": {
                 "group": "all",
@@ -50,12 +48,11 @@
             }
         },
         {
-            "name": "Start and Attach to Backend",
+            "name": "Attach to Backend",
             "type": "pwa-node",
             "request": "attach",
             "port": 9229,
             "restart": true,
-            "preLaunchTask": "Start Backend",
             "presentation": {
                 "group": "all",
                 "hidden": true
@@ -67,10 +64,10 @@
         {
             "name": "Debug (Edge)",
             "configurations": [
-                "Start and Attach to Frontend (Edge)",
-                "Start and Attach to Backend"
+                "Attach to Frontend (Edge)",
+                "Attach to Backend"
             ],
-            "preLaunchTask": "Pre Debug Check",
+            "preLaunchTask": "Pre Debug Check & Start All",
             "presentation": {
                 "group": "all",
                 "order": 1
@@ -80,10 +77,10 @@
         {
             "name": "Debug (Chrome)",
             "configurations": [
-                "Start and Attach to Frontend (Chrome)",
-                "Start and Attach to Backend"
+                "Attach to Frontend (Chrome)",
+                "Attach to Backend"
             ],
-            "preLaunchTask": "Pre Debug Check",
+            "preLaunchTask": "Pre Debug Check & Start All",
             "presentation": {
                 "group": "all",
                 "order": 2
