--- a/graph-toolkit-contact-exporter/.vscode/tasks.json
+++ b/graph-toolkit-contact-exporter/.vscode/tasks.json
@@ -4,33 +4,40 @@
         {
             "label": "Pre Debug Check",
             "dependsOn": [
-                "validate local prerequisites",
-                "prepare local environment"
+                "dependency check",
+                "prepare dev env"
             ],
             "dependsOrder": "sequence"
         },
         {
-            "label": "validate local prerequisites",
+            "label": "dependency check",
             "type": "shell",
-            "command": "exit ${command:fx-extension.validate-local-prerequisites}",
-            "presentation": {
-                "reveal": "never"
-            }
+            "command": "exit ${command:fx-extension.validate-dependencies}"
+        },
+        {
+            "label": "prepare dev env",
+            "dependsOn": [
+                "prepare local environment",
+                "frontend npm install"
+            ],
+            "dependsOrder": "parallel"
         },
         {
             "label": "prepare local environment",
             "type": "shell",
-            "command": "exit ${command:fx-extension.pre-debug-check}",
-            "presentation": {
-                "reveal": "never"
-            }
+            "command": "exit ${command:fx-extension.pre-debug-check}"
         },
         {
             "label": "Start Frontend",
+            "dependsOn": [
+                "teamsfx: frontend start"
+            ],
+            "dependsOrder": "parallel"
+        },
+        {
+            "label": "frontend npm install",
             "type": "shell",
-            "command": "npm run dev:teamsfx",
-            "isBackground": true,
-            "problemMatcher": "$teamsfx-frontend-watch",
+            "command": "npm install --no-audit",
             "options": {
                 "cwd": "${workspaceFolder}/tabs"
             }
