--- a/hello-world-tab-with-backend/.vscode/tasks.json
+++ b/hello-world-tab-with-backend/.vscode/tasks.json
@@ -4,66 +4,66 @@
         {
             "label": "Pre Debug Check",
             "dependsOn": [
-                "validate local prerequisites",
-                "prepare local environment"
+                "dependency check",
+                "prepare dev env"
             ],
             "dependsOrder": "sequence"
         },
         {
-            "label": "validate local prerequisites",
+            "label": "dependency check",
             "type": "shell",
-            "command": "exit ${command:fx-extension.validate-local-prerequisites}",
-            "presentation": {
-                "reveal": "never"
-            }
+            "command": "exit ${command:fx-extension.validate-dependencies}"
+        },
+        {
+            "label": "prepare dev env",
+            "dependsOn": [
+                "prepare local environment",
+                "frontend npm install",
+                "backend npm install"
+            ],
+            "dependsOrder": "parallel"
         },
         {
             "label": "prepare local environment",
             "type": "shell",
-            "command": "exit ${command:fx-extension.pre-debug-check}",
-            "presentation": {
-                "reveal": "never"
-            }
+            "command": "exit ${command:fx-extension.pre-debug-check}"
         },
         {
             "label": "Start Frontend",
+            "dependsOn": [
+                "teamsfx: frontend start"
+            ],
+            "dependsOrder": "parallel"
+        },
+        {
+            "label": "frontend npm install",
             "type": "shell",
-            "command": "npm run dev:teamsfx",
-            "isBackground": true,
-            "problemMatcher": "$teamsfx-frontend-watch",
+            "command": "npm install --no-audit",
             "options": {
                 "cwd": "${workspaceFolder}/tabs"
             }
         },
         {
             "label": "Start Backend",
-            "type": "shell",
-            "command": "npm run dev:teamsfx",
-            "isBackground": true,
-            "problemMatcher": "$teamsfx-backend-watch",
-            "options": {
-                "cwd": "${workspaceFolder}/api",
-                "env": {
-                    "PATH": "${env:PATH}${command:fx-extension.get-func-path}"
-                }
-            },
-            "presentation": {
-                "reveal": "silent"
-            },
-            "dependsOn": "Watch Backend"
+            "dependsOn": [
+                "teamsfx: backend watch",
+                "teamsfx: backend start"
+            ],
+            "dependsOrder": "sequence"
         },
         {
-            "label": "Watch Backend",
+            "label": "backend extensions install",
             "type": "shell",
-            "command": "npm run watch:teamsfx",
-            "isBackground": true,
-            "problemMatcher": "$tsc-watch",
+            "command": "exit ${command:fx-extension.backend-extensions-install}"
+        },
+        {
+            "label": "backend npm install",
+            "type": "shell",
+            "command": "npm install --no-audit",
             "options": {
                 "cwd": "${workspaceFolder}/api"
             },
-            "presentation": {
-                "reveal": "silent"
-            }
+            "dependsOn": "backend extensions install"
         }
     ]
 }
