refactor(bot): rename sample project

--- a/adaptive-card-notification/.fx/configs/projectSettings.json
+++ b/adaptive-card-notification/.fx/configs/projectSettings.json
@@ -1,5 +1,5 @@
 {
-    "appName": "notificationts032501",
+    "appName": "AdaptiveCardNotification",
     "projectId": "dac6ca6b-e075-4ebc-9343-88b4c2f047e7",
     "version": "2.1.0",
     "isFromSample": false,
