--- a/adaptive-card-notification/package.json
+++ b/adaptive-card-notification/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "notificationts032501",
+    "name": "AdaptiveCardNotification",
     "version": "0.0.1",
     "description": "",
     "author": "",
