--- a/hello-world-in-meeting/.fx/configs/projectSettings.json
+++ b/hello-world-in-meeting/.fx/configs/projectSettings.json
@@ -1,6 +1,5 @@
 {
-    "appName": "simplifyinmeetingapp",
-    "projectId": "74c80031-2881-44fa-9d3e-6c967df48589",
+    "appName": "Hello_World_In_Meeting_App",
     "version": "2.1.0",
     "isFromSample": false,
     "solutionSettings": {
