--- a/hello-world-in-meeting/package.json
+++ b/hello-world-in-meeting/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "simplifyinmeetingapp",
+    "name": "helloWorldInMeetingApp",
     "version": "0.0.1",
     "description": "",
     "author": "",
