--- a/todo-list-SPFx/.gitignore
+++ b/todo-list-SPFx/.gitignore
@@ -3,3 +3,5 @@ node_modules
 /.fx/*.userdata
 /.fx/configs/localSettings.json
 .DS_Store
+.fx/configs/config.local.json
+.fx/states/state.local.json
