--- a/adaptive-card-notification/.vscode/settings.json
+++ b/adaptive-card-notification/.vscode/settings.json
@@ -2,4 +2,5 @@
     "debug.onTaskErrors": "abort",
     "azureFunctions.stopFuncTaskPostDebug": false,
     "azureFunctions.showProjectWarning": false,
+    "csharp.suppressDotnetRestoreNotification": true
 }
