--- a/adaptive-card-notification/bot/.funcignore
+++ b/adaptive-card-notification/bot/.funcignore
@@ -1,13 +1,14 @@
-*.js.map
-*.ts
-.git*
-.vscode
-local.settings.json
-test
-tsconfig.json
-.teamsfx.bot.json
 .development
 .DS_Store
-node_modules/.bin
-_storage_emulator
+.git*
 .notification.localstore.json
+.vscode
+*.js.map
+*.ts
+_storage_emulator
+local.settings.json
+node_modules/.bin
+node_modules/azure-functions-core-tools
+node_modules/azurite
+README.md
+tsconfig.json
