--- a/adaptive-card-notification/templates/appPackage/manifest.template.json
+++ b/adaptive-card-notification/templates/appPackage/manifest.template.json
@@ -32,8 +32,7 @@
                 "groupchat"
             ],
             "supportsFiles": false,
-            "isNotificationOnly": false,
-            "commandLists": []
+            "isNotificationOnly": false
         }
     ],
     "composeExtensions": [],
