--- a/graph-toolkit-contact-exporter/tabs/package.json
+++ b/graph-toolkit-contact-exporter/tabs/package.json
@@ -21,7 +21,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "browserslist": {
     "production": [
