--- a/share-now/api/package.json
+++ b/share-now/api/package.json
@@ -5,7 +5,8 @@
     "build": "tsc",
     "watch": "tsc -w",
     "prestart": "npm run build",
-    "start": "npx func start"
+    "start": "npx func start",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "@azure/functions": "^1.2.2",
