--- a/incoming-webhook-notification/.vscode/launch.json
+++ b/incoming-webhook-notification/.vscode/launch.json
@@ -10,7 +10,8 @@
             "presentation": {
                 "group": "all"
             },
-            "preLaunchTask": "Start Incoming Webhook"
+            "preLaunchTask": "Start Incoming Webhook",
+            "postDebugTask": "Terminate All Tasks"
         }
     ]
 }
