--- a/incoming-webhook-notification/.vscode/tasks.json
+++ b/incoming-webhook-notification/.vscode/tasks.json
@@ -2,6 +2,15 @@
     "version": "2.0.0",
     "tasks": [
         {
+            "label": "Install Incoming Webhook",
+            "type": "shell",
+            "command": "npm install",
+            "isBackground": true,
+            "options": {
+                "cwd": "${workspaceFolder}/incoming-webhook"
+            },
+        },
+        {
             "label": "Start Incoming Webhook",
             "type": "shell",
             "command": "npm run dev",
@@ -18,12 +27,27 @@
                 "background": {
                     "activeOnStart": true,
                     "beginsPattern": "[nodemon] starting",
-                    "endsPattern": "restify listening to|[nodemon] app crashed"
+                    "endsPattern": "Debugger listening"
                 }
             },
             "options": {
                 "cwd": "${workspaceFolder}/incoming-webhook"
-            }
+            },
+            "dependsOn": "Install Incoming Webhook"
+        },
+        {
+            "label": "Terminate All Tasks",
+            "command": "echo ${input:terminate}",
+            "type": "shell",
+            "problemMatcher": []
+        }
+    ],
+    "inputs": [
+        {
+            "id": "terminate",
+            "type": "command",
+            "command": "workbench.action.tasks.terminate",
+            "args": "terminateAll"
         }
     ]
 }
