--- a/incoming-webhook-notification/incoming-webhook/package.json
+++ b/incoming-webhook-notification/incoming-webhook/package.json
@@ -1,7 +1,7 @@
 {
   "name": "incoming-webhook-notification",
   "version": "1.0.0",
-  "description": "Microsoft Teams Toolkit hello world Bot sample",
+  "description": "Microsoft Teams Toolkit Incoming Webhook Notification Sample",
   "author": "Microsoft",
   "license": "MIT",
   "main": "./lib/index.js",
@@ -17,11 +17,9 @@
   },
   "dependencies": {
     "@microsoft/adaptivecards-tools": "^0.1.3",
-    "@microsoft/teamsfx": "0.6.3-alpha.768a76f6e.0",
-    "botbuilder": "~4.15.0"
+    "axios": "^0.26.1"
   },
   "devDependencies": {
-    "env-cmd": "^10.1.0",
     "nodemon": "^2.0.7",
     "ts-node": "~9.1.1",
     "typescript": "~3.9.2"
