--- a/share-now/tabs/package.json
+++ b/share-now/tabs/package.json
@@ -24,6 +24,7 @@
     "typescript": "^4.2.4"
   },
   "scripts": {
+	"dev:teamsfx": "env-cmd --silent -f .env.teamsfx.local npm run start",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "eject": "react-scripts eject",
@@ -52,6 +53,7 @@
     "@types/node": "^12.12.21",
     "@types/react": "^16.9.17",
     "@types/react-dom": "^16.9.4",
-    "@types/react-router-dom": "^4.3.3"
+    "@types/react-router-dom": "^4.3.3",
+	"env-cmd": "^10.1.0"
   }
 }
