--- a/todo-list-with-Azure-backend-M365/api/package.json
+++ b/todo-list-with-Azure-backend-M365/api/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
+    "dev:teamsfx": "env-cmd --silent -f .env.teamsfx.local npm run dev",
+    "dev": "func start --javascript --language-worker=\"--inspect=9229\" --port \"7071\" --cors \"*\"",
     "start": "npx func start",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -11,5 +13,8 @@
     "@microsoft/teamsfx": "^0.6.0",
     "isomorphic-fetch": "^3.0.0",
     "uuid": "^8.3.2"
+  },
+  "devDependencies": {
+    "env-cmd": "^10.1.0"
   }
 }
